Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h2>
 
-<p>Chlorine is distributed as a single header: <a href="https://github.com/Polytonic/Chlorine/blob/master/chlorine/chlorine.hpp">chlorine.hpp</a>. You'll also need any version of the <a href="http://www.khronos.org/registry/cl/api/1.2/cl.hpp">OpenCL C++ Bindings</a> and a compiler with <code>C++11</code> support. Here is a short example:</p>
+<p>Chlorine is distributed as a single header: <a href="https://github.com/Polytonic/Chlorine/blob/master/chlorine/chlorine.hpp">chlorine.hpp</a>. You'll also need any version of the <a href="http://www.khronos.org/registry/cl/api/1.2/cl.hpp">OpenCL C++ Bindings</a> and a compiler with <code>C++11</code> support.</p>
 
 <p><strong>main.cpp</strong></p>
 
