Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h2>
 
-<p>Chlorine is distributed as a single header: <a href="https://github.com/Polytonic/Chlorine/blob/master/chlorine/chlorine.hpp">chlorine.hpp</a>. You'll also need any version of the <a href="http://www.khronos.org/registry/cl/api/1.2/cl.hpp">OpenCL C++ Bindings</a> and a compiler with <code>C++11</code> support.</p>
+<p>Chlorine is distributed as a single header: <a href="https://github.com/Polytonic/Chlorine/blob/master/chlorine/chlorine.hpp">chlorine.hpp</a>. You'll also need any version of the <a href="http://www.khronos.org/registry/cl/api/1.2/cl.hpp">OpenCL C++ Bindings</a> and a compiler with <code>C++11</code> support. An example of how to use Chlorine is shown below. You can also read a more detailed <a href="https://github.com/Polytonic/Chlorine/tree/master/examples/swap">walkthrough</a> if you prefer.</p>
 
 <p><strong>main.cpp</strong></p>
 
@@ -77,7 +77,7 @@
     eggs[i] = swap;
 }</pre></div>
 
-<p>You can build all of the samples by invoking <code>make examples</code>, or you can examine and build individual samples in the <a href="https://github.com/Polytonic/Chlorine/tree/master/examples">examples</a> subdirectory.</p>
+<p>You can build all of the samples by invoking <code>make examples</code>, or you can examine and build individual samples from their respective <a href="https://github.com/Polytonic/Chlorine/tree/master/examples">examples</a> subdirectories.</p>
 
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
