--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h2>
 <a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h2>
 
-<p>Chlorine is the easiest way to interact with <a href="https://www.khronos.org/opencl/">OpenCL</a> compatible devices. It is a header-only <code>C++11</code> library that allows you to write cross-platform code that runs on GPUs without ever touching the complicated OpenCL API, leaving you free to write code that matters: kernels that process your data.</p>
+<p>Chlorine is the easiest way to interact with <a href="https://www.khronos.org/opencl/">OpenCL</a> compatible devices. It is a header-only <code>C++11</code> library that allows you to write cross-platform code that runs on GPUs without ever touching the complicated OpenCL API, leaving you free to write code that matters: kernels that process data.</p>
 
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h2>
@@ -39,7 +39,7 @@
 
 <p><strong>main.cpp</strong></p>
 
-<div class="highlight highlight-c++"><pre>std::vector&lt;<span class="pl-k">float</span>&gt; <span class="pl-en">data</span>(<span class="pl-c1">10</span>, <span class="pl-c1">3</span>.<span class="pl-c1">1415f</span>);        <span class="pl-c">// Create Some Sample Data</span>
+<div class="highlight highlight-source-c++"><pre>std::vector&lt;<span class="pl-k">float</span>&gt; <span class="pl-en">data</span>(<span class="pl-c1">10</span>, <span class="pl-c1">3</span>.<span class="pl-c1">1415f</span>);        <span class="pl-c">// Create Some Sample Data</span>
 ch::Worker <span class="pl-en">worker</span>(<span class="pl-s"><span class="pl-pds">"</span>kernel.cl<span class="pl-pds">"</span></span>);              <span class="pl-c">// Initialize a Chlorine Worker</span>
 <span class="pl-k">auto</span> event = worker.call(<span class="pl-s"><span class="pl-pds">"</span>square<span class="pl-pds">"</span></span>, data);    <span class="pl-c">// Call Kernel Square Function</span>
 std::cout &lt;&lt; <span class="pl-s"><span class="pl-pds">"</span>Data: <span class="pl-pds">"</span></span> &lt;&lt; data[<span class="pl-c1">0</span>] &lt;&lt; <span class="pl-s"><span class="pl-pds">"</span><span class="pl-cce">\n</span><span class="pl-pds">"</span></span>;    <span class="pl-c">// Prints 9.8696; Like Magic!</span>
@@ -49,20 +49,20 @@ std::cout &lt;&lt; <span class="pl-s"><span class="pl-pds">"</span>Elapsed Time:
 
 <p><strong>kernel.cl</strong></p>
 
-<div class="highlight highlight-c"><pre>__kernel <span class="pl-k">void</span> <span class="pl-en">square</span>(__global <span class="pl-k">float</span> * data) {
+<div class="highlight highlight-source-c"><pre>__kernel <span class="pl-k">void</span> <span class="pl-en">square</span>(__global <span class="pl-k">float</span> * data) {
     <span class="pl-k">unsigned</span> <span class="pl-k">int</span> i = <span class="pl-c1">get_global_id</span>(<span class="pl-c1">0</span>);
     data[i] = data[i] * data[i];
 }</pre></div>
 
 <p>If you're looking to compile the examples or just want to play around in the sandbox project, follow these steps! Chlorine uses the <a href="http://www.cmake.org/">cmake</a> build system, which is used to generate platform-specific makefiles or project files.</p>
 
-<div class="highlight highlight-bash"><pre>git clone https://github.com/Polytonic/Chlorine
+<div class="highlight highlight-source-shell"><pre>git clone https://github.com/Polytonic/Chlorine
 <span class="pl-c1">cd</span> Chlorine
 <span class="pl-c1">cd</span> build</pre></div>
 
 <p>Now generate a project file or makefile for your platform. If you want to use a particular IDE, make sure it is installed; don't forget to set the Start-Up Project in Visual Studio or the Target in Xcode.</p>
 
-<div class="highlight highlight-bash"><pre><span class="pl-c"># UNIX Makefile</span>
+<div class="highlight highlight-source-shell"><pre><span class="pl-c"># UNIX Makefile</span>
 cmake ..
 
 <span class="pl-c"># Mac OSX</span>
@@ -75,7 +75,7 @@ cmake -G <span class="pl-s"><span class="pl-pds">"</span>Visual Studio 14 Win64<
 
 <p>To run tests, you will need to pull down the test framework, then call the right test script.</p>
 
-<div class="highlight highlight-bash"><pre>git submodule update --init
+<div class="highlight highlight-source-shell"><pre>git submodule update --init
 make check <span class="pl-c"># UNIX</span>
 make_check <span class="pl-c"># Windows</span></pre></div>
 
